set up framework for button click activity using onClickListener properly in Kotlin

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.alumnus.speechaudioanalysis.MainActivity">
 
     <TextView
-        android:id="@+id/sample_text"
+        android:id="@+id/sampleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -17,12 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/mainButton"
         style="@style/Widget.AppCompat.Button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Start Speaking"
-        app:layout_constraintTop_toBottomOf="@+id/sample_text"
+        app:layout_constraintTop_toBottomOf="@+id/sampleText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
