--- a/tardosDSPPitchExample/example/src/main/res/layout/activity_main.xml
+++ b/tardosDSPPitchExample/example/src/main/res/layout/activity_main.xml
@@ -7,12 +7,24 @@
     tools:context="com.alumnus.tardosDspPitchExample.example.MainActivity">
 
     <TextView
+        android:id="@+id/pitchText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Pitch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/noteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Note"
+        app:layout_constraintBottom_toTopOf="@+id/pitchText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.940"/>
 
 </android.support.constraint.ConstraintLayout>
