--- a/DialogflowExample/chatbot/src/main/res/layout/activity_aibutton_sample.xml
+++ b/DialogflowExample/chatbot/src/main/res/layout/activity_aibutton_sample.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="ai.api.sample.AIButtonSampleActivity">
+    tools:context="com.example.sushovan.dialogflowexample.chatbot.AIButtonSampleActivity">
 
     <TextView
         android:layout_width="match_parent"
