--- a/DialogflowExample/chatbot/src/main/res/layout/activity_aiservice_sample.xml
+++ b/DialogflowExample/chatbot/src/main/res/layout/activity_aiservice_sample.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ai.api.sample.AIServiceSampleActivity">
+    tools:context="com.example.sushovan.dialogflowexample.chatbot.AIServiceSampleActivity">
 
     <LinearLayout
         android:id="@+id/top_container"
