--- a/DialogflowExample/base/src/main/res/values/colors.xml
+++ b/DialogflowExample/base/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="view_alpha_background">#4Db4b4b4</color>
+    <color name="divider_color">#cfcfcf</color>
 </resources>
