--- a/DialogflowExample/chatbot/src/main/res/layout/activity_aidialog_sample.xml
+++ b/DialogflowExample/chatbot/src/main/res/layout/activity_aidialog_sample.xml
@@ -12,7 +12,7 @@
             android:id="@+id/buttonListen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Listen"
+            android:text="@string/ai_button_chooser"
             android:layout_centerHorizontal="true"
             android:onClick="buttonListenOnClick"
             />
